--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="J24_GW_PC_non-prime_RNP--unrec_end-frame_Shop-now_2X_R1.CB562558129.jpg" class="d-block w-100">
+                    <img src="image1.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="PC_Hero_3000x1200_20_Deals.CB562507633.jpg" class="d-block w-100" >
+                    <img src="image2.jpg" class="d-block w-100" >
                 </div>
                 <div class="carousel-item">
-                    <img src="D156384865_WLD-Jupiter24_Central-Inputs_Design-SIM-PC_Hero_3000x1200.CB562511220.jpg" class="d-block w-100">
+                    <img src="image3.jpg" class="d-block w-100">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
